--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,10 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
+img {
+  max-width: 100%;
+  display: block;
+}
 .App {
   display: grid;
   grid-template-columns: auto 200px;
@@ -24,7 +27,8 @@
 }
 .ProductList {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 400px));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
 }
 .Product {
 }
